testdata/formatter/failing/incompleteVarsMisalignments_.go
package main

var (
	env              = "dev"
	port        uint = 8484
	logger      l.Logger
	jenkinsMode = false
)
